        * If there is a background character then the bottom layer is the background layer.
    * compatibility improvements:
        * terminfo based terminals with no cursor support are silently accepted. The cursor
          visibility changes in the Picture will have no effect.
        * alternate (setf/setb) color maps supported. Though colors beyond the first 8 are just a
          guess.

4.7.0.0
    * API changes:
       * Added Graphics.Vty.Image.crop: Ensure an image is no larger than the specified size.
       * Added Graphics.Vty.Image.pad: Ensure an image is no smaller than the specified size.
       * Added Graphics.Vty.Image.translate: Offset an image.
    * Thanks Ben Boeckel <MathStuf@gmail.com> for these features.

4.3.0.0

4.2.1.0
    * API changes:
        * Attr record accessor fore_color changed to attr_fore_color
        * Attr record accessor back_color changed to attr_back_color
        * Attr record accessor style changed to attr_style
        * Added an "inline" display attribute changing DSL:
            * put_attr_change applies a display attribute change immediately to a terminal
            * For instance, can be used to change the display attrbiutes of text output via putStrLn
              and putStr. EX: "put_attr_change $ back_color red" will set the
              background color to red. 
            * Changes do not apply to a Picture output via output_picture. 
            * See Graphics.Vty.Inline
        * Moved all IO actions into any monad an instance of MonadIO

4.0.0.1
    * binding for mk_wcswidth was incorrect. Most platforms just magically worked due to
      coincidence.

4.0.0
    * API changes:
        * "getSize" has been removed. Use "terminal vty >>= display_bounds" where "vty" is an
          instance of the Vty data structure.
        * added a "terminal" field to the Vty data structure. Accesses the TerminalHandle associated
          with the Vty instance.