@@ -171,6 +171,15 @@ verify_simple_syn_input_to_event = forAll $ \(InputBlocksUsingTable gen) ->
             input         = intersperse (Delay test_key_delay) keydowns
         assert_events_from_syn_input (map_to_legacy_table table) input events
 
+verify_fkeys_syn_input_to_event :: Property IO
+verify_fkeys_syn_input_to_event = forAll $ \(InputBlocksUsingTable gen) -> monadic $ do
+    let table         = function_keys_0
+        input_seq     = gen table
+        events        = [EvKey k ms | (_,(k,ms)) <- input_seq]
+        keydowns      = [Bytes s    | (s,_) <- input_seq]
+        input         = intersperse (Delay test_key_delay) keydowns
+    assert_events_from_syn_input (concat ansi_classify_table) input events
+
 main :: IO ()
 main = defaultMain
     [ testProperty "basic block generated from a single ansi chars to event translation"
@@ -179,5 +188,7 @@ main = defaultMain
         verify_keys_from_caps_table_block_to_event
     , testProperty "synthesized typing from basic blocks translates to expected events"
         verify_simple_syn_input_to_event
+    , testProperty "synthesized typing from function keys translates to expected events"
+        verify_fkeys_syn_input_to_event
     ]
 
